--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 						<div class="yui-u">
 							<h2>University of Bristol, UK</h2>
 							<h3>4 yr Masters of Engineering in Computer Systems Engineering &mdash; <strong>2.1</strong> </h3>
+							<p>Final year thesis was a set of C++ Neural Nets and an engine that used genetic algorithms to converge on the optimum network topology for any given problem domain &amp; dataset.</p>
 						</div>
 					</div><!--// .yui-gf -->
 					
