--- a/index.html
+++ b/index.html
@@ -119,12 +119,19 @@
 								<h4>Mar 2015 to Jan 2016</h4>
 								<p>I came on board to help Steve grow the engineering team and the company. We had a good year with some tough challenges and in the process I had to get to grips with Google App Engine as well as some serious Android and iOS development. In the end some personal differences meant that we needed to part ways but the journey was a lot of fun.</p>
 							</div>
+							
+							<div class="job">
+								<h2>Fourthmate</h2>
+								<h3>Software Engineer &amp; Architect</h3>
+								<h4>Mar 2013 to Mar 2015</h4>
+								<p>Fourthmate (now pinpointworks) was a side project for about 2 years where we built out an android client and a spring, couchdb and elastic search back end that was capable of visually tracking work lists for super yachts and schools. In the end the major problem was one of selling rather than technology.</p>
+							</div>
 
 							<div class="job">
 								<h2>Oracle Corporation</h2>
 								<h3>Principal Software Engineer</h3>
 								<h4>Mar 2010 to Mar 2015</h4>
-								<p>Working as part of the Oracle Business Intelligence Infrastructure Team in Bristol on the BI Platform, Fusion Applications and later Oracle Public Cloud. Oracle is full of high callibre engineers and I was generally operating as the tech lead within whichever Scrum team I happened to be operating in.</p>
+								<p>Working as part of the Oracle Business Intelligence Infrastructure Team in Bristol on the BI Platform, Fusion Applications and later Oracle Public Cloud. Oracle is full of high callibre engineers and I was generally operating as the tech lead within whichever Scrum team I happened to be in.</p>
 							</div>
 
 							<div class="job">
