added other interests

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 							</div>
 
 							<div class="job">
+							</div>
+
+							<div class="job">
 								<h2>Oracle Corporation</h2>
 								<h3>Principal Software Engineer</h3>
 								<h4>Mar 2010 to Mar 2015</h4>
