added other interests

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
 							<div class="job">
 							</div>
 
+							<div>
+								<p>&nbsp;</p>
+							</div>
+
 							<div class="job">
 								<h2>Oracle Corporation</h2>
 								<h3>Principal Software Engineer</h3>
