added other interests

--- a/index.html
+++ b/index.html
@@ -132,9 +132,15 @@
 								<p>Fourthmate (now pinpointworks) was a side project for about 2 years where we built out an android client and a spring, couchdb and elastic search back end that was capable of visually tracking work lists for super yachts and schools. In the end the major problem was one of selling rather than technology.</p>
 							</div>
 
-							<div class="job">
+							<div>
+								<p>&nbsp;</p>
 							</div>
-
+							<div>
+								<p>&nbsp;</p>
+							</div>
+							<div>
+								<p>&nbsp;</p>
+							</div>
 							<div>
 								<p>&nbsp;</p>
 							</div>
