skills plus deep learning

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								17 years building innovative software products and services in agile environments. At my best when distilling complex business requirements into a clear, simple and lean software architecture. A good communicator, interested in the wider business environment and able to offer strategic insight as well as technical leadership. A passion for working with smart (and funny) people to engineer great product.
+								17 years building innovative software products and services in agile environments. At my best when distilling complex business requirements into a clear, simple and lean software architecture. A good communicator, interested in the wider business environment and able to offer strategic insight as well as technical leadership. A passion for working with smart (and funny) people to engineer great product. Looking for an opportunity to explore Deep Learning.
 							</p>
 
 						</div>
@@ -88,15 +88,15 @@
 							</ul>
 
 							<ul class="talent">
+								<li class="last">Machine Learning &amp; Chatbots</li>
 								<li>CI &amp; CD</li>
 								<li>Google Cloud Platform &amp; AWS</li>
-								<li>Big Data</li>
-								<li class="last">Interest in Bots, AI &amp; ML</li>
+								<li>Big Data &amp; Analytics</li>
 							</ul>
 
 							<ul class="talent">
-								<li>HTML5</li>
-								<li>CSS</li>
+								<li>HTML5 &amp; CSS</li>
+								<li>Python &amp; PHP</li>
 								<li>Android</li>
 								<li class="last">iOS</li>
 							</ul>
