skills plus deep learning

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 							</ul>
 
 							<ul class="talent">
-								<li class="last">Machine Learning &amp; Chatbots</li>
+								<li>Machine Learning &amp; Chatbots</li>
 								<li>CI &amp; CD</li>
 								<li>Google Cloud Platform &amp; AWS</li>
-								<li>Big Data &amp; Analytics</li>
+								<li class="last">Big Data &amp; Analytics</li>
 							</ul>
 
 							<ul class="talent">
