--- a/index.html
+++ b/index.html
@@ -46,9 +46,17 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								17 years building innovative software products and services in agile environments. At my best when distilling complex business requirements into a clear, simple and lean software architecture. A good communicator, interested in the wider business environment and able to offer strategic insight as well as technical leadership. A passion for working with smart (and funny) people to engineer great product. Looking for an opportunity to explore Deep Learning.
+								17 years building innovative software products and services in agile environments.
+								At my best when distilling complex business requirements into a clear, simple and lean software architecture.
+								A good communicator, interested in the wider business environment and able to offer strategic insight as
+								well as technical leadership.
+								A passion for working with smart (and funny) people to engineer great product.
 							</p>
-
+							&nbsp;
+							<p class="enlarge">
+								I'm currently undertaking a course in Practical Deep Learning and am ideally looking
+								for an opportunity to explore neural nets further.
+							</p>
 						</div>
 					</div><!--// .yui-gf -->
 
@@ -81,24 +89,24 @@
 						</div>
 						<div class="yui-u">
 							<ul class="talent">
-								<li>Java</li>
-								<li>Microservices</li>
-								<li>Web Services</li>
-								<li class="last">Javascript</li>
+								<li>Java, JEE &amp; Spring</li>
+								<li>Microservices &amp; Web Services</li>
+								<li>Google Cloud Platform &amp; AWS</li>
+								<li class="last">SQL, NoSQL &amp; Graph DB&apos;s</li>
 							</ul>
 
 							<ul class="talent">
 								<li>Machine Learning &amp; Chatbots</li>
-								<li>CI &amp; CD</li>
-								<li>Google Cloud Platform &amp; AWS</li>
+								<li>Continuous Integration &amp; Delivery</li>
+								<li>Docker &amp; Docker Compose</li>
 								<li class="last">Big Data &amp; Analytics</li>
 							</ul>
 
 							<ul class="talent">
-								<li>HTML5 &amp; CSS</li>
+								<li>Test Driven Development</li>
 								<li>Python &amp; PHP</li>
-								<li>Android</li>
-								<li class="last">iOS</li>
+								<li>Android &amp; some iOS</li>
+								<li class="last">HTML5, Javascript &amp; CSS</li>
 							</ul>
 						</div>
 					</div><!--// .yui-gf-->
