--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
 										<b>Key Achievements during my time at Multicom:</b>
 										<li>Recommended and then implemented a move of the companies development platform from Visual C++ Windows software (with in house scripting language) to Open Source Java</li>
 										<li>Re-wrote the companies core product (Windows desktop client) as a Java client/server application</li>
-										<li>Designed & implemented the first leisure GDS Web Service in the UK (and in doing so:)</li>
+										<li>Designed &amp; implemented the first leisure GDS Web Service in the UK (and in doing so:)</li>
 										<li>Invented my own Java/XML data binding framework (before the term was coined)</li>
 										<li>Invented my own Inversion of Control framework (before Spring was first released)</li>
 										<li>Implemented my own high performance, XML aware, software load balancer with sticky sessions allowing us to operate the Web Service across multiple servers and sites without loss of service due to upgrades or hardware failure</li>
 										<li>Implemented a powerful Management Intelligence auditing framework which allows the company to track detailed statistics and automatically produce user-defined reports</li>
 										<li>Implemented an automated testing service which uses real-world user sessions from the previous days trading to regression test the latest software updates before they are rolled out to the live servers</li>
-										<li>Designed &amp; implemented our next generation Web Services platform built on top of an open source software stack (Spring, Hibernate, XFire etc) which included Highly modular service plug-in architecture, Intelligent caching and virtual session technology.</li>
+										<li>Designed &amp; implemented our next generation Web Services platform built on top of an open source software stack (Spring, Hibernate, XFire etc) which included highly modular service plug-in architecture, intelligent caching and virtual session technology.</li>
 									</ul>
 
 							</div>
