--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 								<li>Machine Learning &amp; Chatbots</li>
 								<li>Continuous Integration &amp; Delivery</li>
 								<li>Docker &amp; Docker Compose</li>
-								<li class="last">Big Data &amp; Analytics</li>
+								<li class="last">BI, Big Data &amp; Analytics</li>
 							</ul>
 
 							<ul class="talent">
 								<li>Test Driven Development</li>
-								<li>Python &amp; PHP</li>
+								<li>PHP</li>
 								<li>Android &amp; some iOS</li>
 								<li class="last">HTML5, Javascript &amp; CSS</li>
 							</ul>
