--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 								<h2>Oracle Corporation</h2>
 								<h3>Principal Software Engineer</h3>
 								<h4>Mar 2010 to Mar 2015</h4>
-								<p>Working as part of the Oracle Business Intelligence Infrastructure Team in Bristol on the BI Platform, Fusion Applications and later Oracle Public Cloud. Oracle is full of high callibre engineers and I was generally operating as the tech lead within whichever Scrum team I happened to be in.</p>
+								<p>Working as part of the Oracle Business Intelligence Infrastructure Team in Bristol on the BI Platform, Fusion Applications and later Oracle Public Cloud. Oracle is full of high calibre engineers and I was generally operating as the tech lead within whichever Scrum team I happened to be in.</p>
 							</div>
 
 							<div class="job">
