--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								<h2>Comtec Group</h2>
 								<h3>Travel Gateway Architect</h3>
 								<h4>May 2008 to Mar 2010</h4>
-								<p>I joined Comtec on the back of promises made by the company to inject resources into the Travel Gateway division so that we could re-engineer this core component of the Comtec Travel stack. I spent the first few months designing a modular and highly scalable flight booking engine using Test Driven Design, Spring 3, Spring Web Services and Maven. However, budgetary pressures have meant that I found myself more in a technical project management role and not the engineering position I desired.</p>
+								<p>I joined Comtec on the back of promises made by the company to inject resources into the Travel Gateway division so that we could re-engineer this core component of the Comtec Travel stack. I spent the first few months designing a modular and highly scalable flight booking engine using Test Driven Design, Spring 3, Spring Web Services and Maven. However, budgetary pressures meant that I found myself in more of a technical project management role.</p>
 							</div>
 
 							<div class="job">
