updated recent title

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 							<div class="job">
 								<h2>Cloudburst Strategy</h2>
-								<h3>Founder &amp; CEO</h3>
+								<h3>Founder, Architect &amp; Engineer</h3>
 								<h4>Jan 2016 to Present</h4>
 								<p><a href="http://cloudburststrategy.com">Cloudburst Strategy</a> is a consultancy that specialises in leveraging the latest emerging cloud technologies in order to deliver value to our clients. We can work with the business to build proof of concepts or MVPs quickly and cost-effictively focusing on testing hypotheses and rapid iteration. In 2016 we have been helping one organisation in the leisure travel industry to utilise Google's new Flexible App Engine in order to build out an exciting new product as a set of Spring Boot microservices.</p>
 							</div>
@@ -135,7 +135,7 @@
 
 							<div class="job">
 								<h2>Fourthmate</h2>
-								<h3>Software Engineer &amp; Architect</h3>
+								<h3>Founder, Architect &amp; Engineer</h3>
 								<h4>Mar 2013 to Mar 2015</h4>
 								<p>Fourthmate (now pinpointworks) was a side project for about 2 years where we built out an android client and a spring, couchdb and elastic search back end that was capable of visually tracking work lists for super yachts and schools. In the end the major problem was one of selling rather than technology.</p>
 							</div>
