--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 							</p>
 							&nbsp;
 							<p class="enlarge">
-								I'm currently undertaking a course in Practical Deep Learning and am ideally looking
-								for an opportunity to explore neural nets further.
+								I'm currently looking for contract opportunities in Bristol or primarily remote roles with only occasional on-site requirements.
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
@@ -68,7 +67,7 @@
 
 								<div class="talent">
 									<h2>Infrastructure</h2>
-									<p>Primarily Java server side engineering with a focus on open source tools and cloud computing</p>
+									<p>Primarily Java server side engineering with a focus on open source tools, cloud computing and data engineering</p>
 								</div>
 
 								<div class="talent">
@@ -104,7 +103,7 @@
 
 							<ul class="talent">
 								<li>Test Driven Development</li>
-								<li>PHP</li>
+								<li>Python &amp; PHP</li>
 								<li>Android &amp; some iOS</li>
 								<li class="last">HTML5, Javascript &amp; CSS</li>
 							</ul>
@@ -118,6 +117,13 @@
 						</div><!--// .yui-u -->
 
 						<div class="yui-u">
+
+							<div class="job">
+								<h2>AI Music</h2>
+								<h3>Lead Platform Engineer</h3>
+								<h4>Feb 2017 to Present</h4>
+								<p><a href="http://aimusic.co.uk">AI Music</a> is evolving music from a static, one-directional interaction to one of dynamic co-creation. I am leading the architecture and engineering efforts to build out Google Cloud infrastructure to support a highly ambitious mobile app as a first step on that journey. This involves a Spring Boot based API, a large social graph, many innovative audio processing components and Tensor Flow models running in Google Machine Learning Engine.</p>
+							</div>
 
 							<div class="job">
 								<h2>Cloudburst Strategy</h2>
