--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								17 years building innovative software products and services in agile environments.
+								20+ years building innovative software products and services in agile environments.
 								At my best when distilling complex business requirements into a clear, simple and lean software architecture.
 								A good communicator, interested in the wider business environment and able to offer strategic insight as
 								well as technical leadership.
@@ -54,8 +54,26 @@
 							</p>
 							&nbsp;
 							<p class="enlarge">
-								I'm currently looking for contract opportunities in Bristol or primarily remote roles with only occasional on-site requirements.
+								I'm currently looking for a contract opportunities where I can work remotely from home.
 							</p>
+						</div>
+					</div><!--// .yui-gf -->
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Domains</h2>
+						</div>
+						<div class="yui-u">
+
+							<div class="talent">
+								<h2>Banking &amp; Payments</h2>
+							</div>
+							<div class="talent">
+								<h2>AI &amp; Apps</h2>
+							</div>
+							<div class="talent">
+								<h2>Travel Tech</h2>
+							</div>
 						</div>
 					</div><!--// .yui-gf -->
 
@@ -76,8 +94,8 @@
 								</div>
 
 								<div class="talent">
-									<h2>Full Stack</h2>
-									<p>Comfortable from the top to the bottom with experience in web tech and various mobile platforms</p>
+									<h2>Performance</h2>
+									<p>A history of performance testing, lowering costs and evolving architectures towards more elasticity, flexibility and scalability</p>
 								</div>
 						</div>
 					</div><!--// .yui-gf -->
@@ -88,23 +106,23 @@
 						</div>
 						<div class="yui-u">
 							<ul class="talent">
-								<li>Java, JEE &amp; Spring</li>
-								<li>Microservices &amp; Web Services</li>
+								<li>Java, Spring, Micronaut</li>
+								<li>Microservices, Functions</li>
 								<li>Google Cloud Platform &amp; AWS</li>
 								<li class="last">SQL, NoSQL &amp; Graph DB&apos;s</li>
 							</ul>
 
 							<ul class="talent">
-								<li>Machine Learning &amp; Chatbots</li>
+								<li>Big Data, Messaging, Kafka</li>
+								<li>Security, OAuth2, OIDC, FAPI</li>
 								<li>Continuous Integration &amp; Delivery</li>
-								<li>Docker &amp; Docker Compose</li>
-								<li class="last">BI, Big Data &amp; Analytics</li>
+								<li class="last">Docker, Kubenetes</li>
 							</ul>
 
 							<ul class="talent">
 								<li>Test Driven Development</li>
-								<li>Python &amp; PHP</li>
-								<li>Android &amp; some iOS</li>
+								<li>Machine Learning &amp; Chatbots</li>
+								<li>Android, GraphQL</li>
 								<li class="last">HTML5, Javascript &amp; CSS</li>
 							</ul>
 						</div>
@@ -119,9 +137,20 @@
 						<div class="yui-u">
 
 							<div class="job">
+								<h2>Velo Payments</h2>
+								<h3>Senior Software Engineer</h3>
+								<h4>Jan 2018 to Present</h4>
+								<p><a href="https://www.velopayments.com">Velo Payments</a> is a start-up that was re-imagining business payments for the gig-economy but has hit some funding difficulties due to the COVID-19 pandemic.
+									Working with a great team of people to engineer a truly next-gen, data-driven, cloud agnostic payments platform with Bank grade security. During my 2.5 years with Velo I have been responsible for, among other things,
+									increasing the throughput of the platform by a factor of 10+ and completely re-designing the security architecture in such a way that the platform can be deployed in many different
+									scenarios including inside a Bank's own network - working with the Bank's existing IAM and SSO systems (whatever they may be).
+								</p>
+							</div>
+
+							<div class="job">
 								<h2>AI Music</h2>
 								<h3>Lead Platform Engineer</h3>
-								<h4>Feb 2017 to Present</h4>
+								<h4>Feb 2017 to Jan 2018</h4>
 								<p><a href="http://aimusic.co.uk">AI Music</a> is evolving music from a static, one-directional interaction to one of dynamic co-creation. I am leading the architecture and engineering efforts to build out Google Cloud infrastructure to support a highly ambitious mobile app as a first step on that journey. This involves a Spring Boot based API, a large social graph, many innovative audio processing components and Tensor Flow models running in Google Machine Learning Engine.</p>
 							</div>
 
