--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="yui-u">
 					<div class="contact-info">
 						<h3><a href="mailto:ajchesney@gmail.com">ajchesney@gmail.com</a></h3>
-						<h3><a href="adamchesney.pdf">Download PDF</a></h3>
+						<h3><a target="_blank" href="adamchesney.pdf">Download PDF</a></h3>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
