--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							</p>
 							&nbsp;
 							<p class="enlarge">
-								I'm currently looking for a contract opportunities where I can work remotely from home.
+								I'm currently looking for contract opportunities working remotely from my home office.
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
@@ -140,7 +140,7 @@
 								<h2>Velo Payments</h2>
 								<h3>Senior Software Engineer</h3>
 								<h4>Jan 2018 to Present</h4>
-								<p><a href="https://www.velopayments.com">Velo Payments</a> is a start-up that was re-imagining business payments for the gig-economy but has hit some funding difficulties due to the COVID-19 pandemic.
+								<p><a href="https://www.velopayments.com">Velo Payments</a> is a an "all remote, no offices" start-up that was re-imagining business payments for the gig-economy but has hit some funding difficulties due to the COVID-19 pandemic.
 									Working with a great team of people to engineer a truly next-gen, data-driven, cloud agnostic payments platform with Bank grade security. During my 2.5 years with Velo I have been responsible for, among other things,
 									increasing the throughput of the platform by a factor of 10+ and completely re-designing the security architecture in such a way that the platform can be deployed in many different
 									scenarios including inside a Bank's own network - working with the Bank's existing IAM and SSO systems (whatever they may be).
