--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 								<h3>Senior Software Engineer</h3>
 								<h4>Jan 2018 to Present</h4>
 								<p><a href="https://www.velopayments.com">Velo Payments</a> is a an "all remote, no offices" start-up that was re-imagining business payments for the gig-economy but has hit some funding difficulties due to the COVID-19 pandemic.
-									Working with a great team of people to engineer a truly next-gen, data-driven, cloud agnostic payments platform with Bank grade security. During my 2.5 years with Velo I have been responsible for, among other things,
+									Working with a great team of people to engineer a truly next-gen, data-driven, cloud agnostic payments platform with bank-grade security. During my 2.5 years with Velo I have been responsible for, among other things,
 									increasing the throughput of the platform by a factor of 10+ and completely re-designing the security architecture in such a way that the platform can be deployed in many different
-									scenarios including inside a Bank's own network - working with the Bank's existing IAM and SSO systems (whatever they may be).
+									scenarios including inside a bank's own network - working with the bank's existing IAM and SSO systems (whatever they may be).
 								</p>
 							</div>
 
