--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							<div class="job">
 								<h2>Cloudburst Strategy</h2>
 								<h3>Founder, Architect &amp; Engineer</h3>
-								<h4>Jan 2016 to Present</h4>
+								<h4>Jan 2016 to Jan 2018</h4>
 								<p><a href="http://cloudburststrategy.com">Cloudburst Strategy</a> is a consultancy that specialises in leveraging the latest emerging cloud technologies in order to deliver value to our clients. We can work with the business to build proof of concepts or MVPs quickly and cost-effictively focusing on testing hypotheses and rapid iteration. In 2016 we have been helping one organisation in the leisure travel industry to utilise Google's new Flexible App Engine in order to build out an exciting new product as a set of Spring Boot microservices.</p>
 							</div>
 
