--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 								<h2>Multicom Products Ltd</h2>
 								<h3>Chief Architect &amp; Development Team Leader</h3>
 								<h4>Sep 1999 to Dec 2008</h4>
-								<p>Leading the development team in building an industry leading XML web service on an open source Java software stack. The leisure travel selling system is highly scalable and runs on a 64-bit application server farm, with load balancing and multi-site redundancy with automatic fail over. It handles peak load in excess of 100,000 search queries an hour, with over 60% of responses being returned in under 1 second. My job evolved along with the company and my main duties included systems architecture (new developments), software engineering (new systems and enhancements to the current systems), liaising with the other department heads (prioritising developments and open issues) and managing the work load of the development team. Although I am a capable department head, my interests clearly lie in the fields of Software Architecture and Engineering rather than managing people, which is really why I went looking for something else.
+								<p>Leading the development team in building an industry leading XML web service on an open source Java software stack. My job evolved along with the company and my main duties included systems architecture (new developments), software engineering (new systems and enhancements to the current systems), liaising with the other department heads (prioritising developments and open issues) and managing the work load of the development team. Although I am a capable department head, my interests clearly lie in the fields of Software Architecture and Engineering rather than managing people, which is really why I went looking for something else.
 								</p>
 
 									<ul>
