--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							</p>
 							&nbsp;
 							<p class="enlarge">
-								I'm currently looking for contract opportunities working remotely from my home office.
+								I'm currently tinkering with <a href="https://nostr.com">NOSTR</a>
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
