--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
 								well as technical leadership.
 								A passion for working with smart (and funny) people to engineer great product.
 							</p>
-							&nbsp;
+							<p>&nbsp;</p>
 							<p class="enlarge">
-								I'm currently tinkering with <a href="https://nostr.com">NOSTR</a>
+								I'm currently looking for funding for building a <a href="./NOSTRansact/nostransact.html">NOSTR/Bitcoin open commerce platform</a> but also
+								potentially interested in working for a Bitcoin focused company.
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
