--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							</p>
 							<p>&nbsp;</p>
 							<p class="enlarge">
-								I'm currently looking for funding for building a <a href="./NOSTRansact/nostransact.html">NOSTR/Bitcoin open commerce platform</a> but also
+								I'm currently looking for funding to build a <a href="./NOSTRansact/nostransact.html">NOSTR/Bitcoin open commerce platform</a> but also
 								potentially interested in working for a Bitcoin focused company.
 							</p>
 						</div>
