--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 							<div class="job">
 								<h2>Velo Payments</h2>
-								<h3>Senior Software Engineer</h3>
+								<h3>Lead Platform Engineer</h3>
 								<h4>Jan 2018 to Present</h4>
 								<p><a href="https://www.velopayments.com">Velo Payments</a> is a an "all remote, no offices" start-up that was re-imagining business payments for the gig-economy but has hit some funding difficulties due to the COVID-19 pandemic.
 									Working with a great team of people to engineer a truly next-gen, data-driven, cloud agnostic payments platform with bank-grade security. During my 2.5 years with Velo I have been responsible for, among other things,
