--- a/nostransact.html
+++ b/nostransact.html
@@ -5,6 +5,6 @@
     <meta http-equiv="refresh" content="0; url=https://docs.google.com/document/d/e/2PACX-1vQTVST2LGIxW8hwK57WDeqXZlewbAhREWYlOMmrYmYL-kcm44C13cckeJqf4kDXf_PajrvBheHHAM4_/pub">
 </head>
 <body>
-<p>Redirecting to the NOSTRansact publsihed Google Doc...</p>
+<p>Redirecting to the NOSTRansact published Google Doc...</p>
 </body>
 </html>
