--- a/index.html
+++ b/index.html
@@ -141,10 +141,11 @@
 								<h2>Velo Payments</h2>
 								<h3>Lead Platform Engineer</h3>
 								<h4>Jan 2018 to Present</h4>
-								<p><a href="https://www.velopayments.com">Velo Payments</a> is a an "all remote, no offices" start-up that was re-imagining business payments for the gig-economy but has hit some funding difficulties due to the COVID-19 pandemic.
-									Working with a great team of people to engineer a truly next-gen, data-driven, cloud agnostic payments platform with bank-grade security. During my 2.5 years with Velo I have been responsible for, among other things,
+								<p><a href="https://www.velopayments.com">Velo Payments</a> is a an "all remote, no offices" start-up that was re-imagining business payments for the gig-economy.
+									Working with a great team of people to engineer a truly next-gen, data-driven, cloud agnostic payments platform with bank-grade security. During my first 3 years with Velo I have been responsible for, among other things,
 									increasing the throughput of the platform by a factor of 10+ and completely re-designing the security architecture in such a way that the platform can be deployed in many different
 									scenarios including inside a bank's own network - working with the bank's existing IAM and SSO systems (whatever they may be).
+									In the last 2 years I have become the lead platform engineer, responsible for both designing new features and integrating new payment rails.
 								</p>
 							</div>
 
@@ -270,10 +271,13 @@
 							<h3>Being a good dad to my 3 amazing kids</h3>
 						</div>
 						<div class="yui-u">
+							<h3>Watching every Liverpool FC match</h3>
+						</div>
+						<div class="yui-u">
 							<h3>Sometimes I try to start businesses :0)</h3>
 						</div>
 						<div class="yui-u">
-							<h3><a href="https://mixcloud.com/TiGz">Occasionally i'm a hard dance DJ</a></h3>
+							<h3><a href="https://mixcloud.com/TiGz">Occasionally i'm also a DJ</a></h3>
 						</div>
 					</div><!--// .yui-gf -->
 
