--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								<li>Test Driven Development</li>
 								<li>Machine Learning &amp; Chatbots</li>
 								<li>Android, GraphQL</li>
-								<li class="last">HTML5, Javascript &amp; CSS</li>
+								<li class="last">Javascript, Node JS</li>
 							</ul>
 						</div>
 					</div><!--// .yui-gf-->
@@ -275,6 +275,9 @@
 						</div>
 						<div class="yui-u">
 							<h3>Sometimes I try to start businesses :0)</h3>
+						</div>
+						<div class="yui-u">
+							<h3>Everything Bitcoin... fix the money, fix the world.</h3>
 						</div>
 						<div class="yui-u">
 							<h3><a href="https://mixcloud.com/TiGz">Occasionally i'm also a DJ</a></h3>
