--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
 							</p>
 							<p>&nbsp;</p>
 							<p class="enlarge">
-								I'm currently looking for funding to build a <a href="./nostransact.html">NOSTR/Bitcoin open commerce platform</a> but also
+								I'm currently learning about <a href="https://nostr.com">Nostr</a> and LLM driven AI agents such as AutoGPT.
+								I'm excited about the new world of apps that will be built at the intersection
+								of open social networks, machine to machine payments (e.g. Bitcoin Lightning Network) and autonomous AI agents.
+							</p>
+							<p>&nbsp;</p>
+							<p class="enlarge">
+								I'm currently looking for funding to build a <a href="./nostransact.html">Nostr/Bitcoin open commerce platform</a> but also
 								potentially interested in working for a Bitcoin focused company.
 							</p>
 						</div>
