added ai directed economy

--- a/index.html
+++ b/index.html
@@ -54,14 +54,23 @@
 							</p>
 							<p>&nbsp;</p>
 							<p class="enlarge">
-								I'm currently learning about <a href="https://nostr.com">Nostr</a> and LLM driven AI agents such as AutoGPT.
-								I'm excited about the new world of apps that will be built at the intersection
-								of open social networks, machine to machine payments (e.g. Bitcoin Lightning Network) and autonomous AI agents.
+								Currently looking for a Bitcoin/Nostr focused company to work for so that I can help to fix the money, fix the world.
+							</p>
+						</div>
+					</div><!--// .yui-gf -->
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Currently playing with</h2>
+						</div>
+						<div class="yui-u">
+							<p class="enlarge">
+								ChatGPT and Langchain because I believe we will see a move towards an <a href="./aidirectedeconomy.html">AI Directed Economy</a>
+								where LLM based AI Agents are co-ordinating more and more human and financial resources.
 							</p>
 							<p>&nbsp;</p>
 							<p class="enlarge">
-								I'm currently looking for funding to build a <a href="./nostransact.html">Nostr/Bitcoin open commerce platform</a> but also
-								potentially interested in working for a Bitcoin focused company.
+								Potentially looking for funding to build a <a href="./nostransact.html">Nostr/Bitcoin open commerce platform</a>
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
