--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
+								Here is a proof of concept <a href="tubercheck.html">TuberCheck app</a> I'm working on which allows parents to get a sumamry of any YouTube video.
+								It is built using the most excellent Supabase and OpenAI API.
+							</p>
+							<p>&nbsp;</p>
+							<p class="enlarge">
 								ChatGPT and Langchain because I believe we will see a move towards an <a href="./aidirectedeconomy.html">AI Directed Economy</a>
 								where LLM based AI Agents are co-ordinating more and more human and financial resources.
 							</p>
