--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								Here is a proof of concept <a href="tubercheck.html">TuberCheck app</a> I'm working on which allows parents to get a sumamry of any YouTube video.
+								Here is a proof of concept <a href="tubercheck.html">TuberCheck app</a> I'm working on which allows parents to get a summary of any YouTube video.
 								It is built using the most excellent Supabase and OpenAI API.
 							</p>
 							<p>&nbsp;</p>
