--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@
 								well as technical leadership.
 								A passion for working with smart (and funny) people to engineer great product.
 							</p>
-							<p>&nbsp;</p>
-							<p class="enlarge">
-								Currently looking for a Bitcoin/Nostr focused company to work for so that I can help to fix the money, fix the world.
-							</p>
 						</div>
 					</div><!--// .yui-gf -->
 
@@ -64,11 +60,6 @@
 							<h2>Currently playing with</h2>
 						</div>
 						<div class="yui-u">
-							<p class="enlarge">
-								Here is a proof of concept <a href="tubercheck.html">TuberCheck app</a> I'm working on which allows parents to get a summary of any YouTube video.
-								It is built using the most excellent Supabase and OpenAI API.
-							</p>
-							<p>&nbsp;</p>
 							<p class="enlarge">
 								ChatGPT and Langchain because I believe we will see a move towards an <a href="./aidirectedeconomy.html">AI Directed Economy</a>
 								where LLM based AI Agents are co-ordinating more and more human and financial resources.
@@ -127,22 +118,25 @@
 						</div>
 						<div class="yui-u">
 							<ul class="talent">
-								<li>Java, Spring, Micronaut</li>
+								<li>Java, Kotlin</li>
+								<li>Quarkus, Spring, Micronaut</li>
 								<li>Microservices, Functions</li>
 								<li>Google Cloud Platform &amp; AWS</li>
-								<li class="last">SQL, NoSQL &amp; Graph DB&apos;s</li>
-							</ul>
-
-							<ul class="talent">
-								<li>Big Data, Messaging, Kafka</li>
-								<li>Security, OAuth2, OIDC, FAPI</li>
-								<li>Continuous Integration &amp; Delivery</li>
 								<li class="last">Docker, Kubenetes</li>
 							</ul>
 
 							<ul class="talent">
+								<li>AI, LLMs, Prompt Engineering</li>
+								<li>PostgreSQL, Supabase</li>
+								<li>Big Data, Messaging, Kafka</li>
+								<li>SQL, NoSQL &amp; Graph DB&apos;s</li>
+								<li class="last">Security, OAuth2, OIDC, FAPI</li>
+							</ul>
+
+							<ul class="talent">
+								<li>Gradle, Maven</li>
+								<li>Continuous Integration &amp; Delivery</li>
 								<li>Test Driven Development</li>
-								<li>Machine Learning &amp; Chatbots</li>
 								<li>Android, GraphQL</li>
 								<li class="last">Javascript, Node JS</li>
 							</ul>
@@ -161,11 +155,13 @@
 								<h2>Velo Payments</h2>
 								<h3>Lead Platform Engineer</h3>
 								<h4>Jan 2018 to Present</h4>
-								<p><a href="https://www.velopayments.com">Velo Payments</a> is a an "all remote, no offices" start-up that was re-imagining business payments for the gig-economy.
-									Working with a great team of people to engineer a truly next-gen, data-driven, cloud agnostic payments platform with bank-grade security. During my first 3 years with Velo I have been responsible for, among other things,
-									increasing the throughput of the platform by a factor of 10+ and completely re-designing the security architecture in such a way that the platform can be deployed in many different
-									scenarios including inside a bank's own network - working with the bank's existing IAM and SSO systems (whatever they may be).
-									In the last 2 years I have become the lead platform engineer, responsible for both designing new features and integrating new payment rails.
+								<p><a href="https://www.velopayments.com">Velo Payments</a> is a an "all remote, no offices" start-up that was re-imagining 
+									business payments for the gig-economy. Working remotely with a great team of people to engineer a truly next-gen, data-driven, 
+									cloud-agnostic payments platform with bank-grade security. During my time with Velo, I have been responsible for, among other 
+									things, designing new platform features, integrating a bunch of new payment rails, increasing the throughput of the platform 
+									by a factor of 10+ and completely re-designing the security architecture in such a way that the platform can be deployed in 
+									many different scenarios including inside a bank's own network. The last year or so have been spent re-imagining a new 
+									high-performance modulithic architecture for a new set of products and building out the infrastructure components to support that.
 								</p>
 							</div>
 
