--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section class="currently-playing yui-gf">
             <div class="section-title">Currently playing with</div>
             <p>
-                ChatGPT and Langchain because I believe we will see a move towards an <a href="./aidirectedeconomy.html">AI Directed Economy</a>
+                Anthropic Claude, Ollama and Langchain because I believe we will see a move towards an <a href="./aidirectedeconomy.html">AI Directed Economy</a>
                 where LLM based AI Agents are co-ordinating more and more human and financial resources.
             </p>
             <p>
@@ -166,7 +166,7 @@
             <div class="section-title">Experience</div>
             <div class="job">
                 <h4>Velo Payments</h4>
-                <h5>Lead Platform Engineer (Jan 2018 to Present)</h5>
+                <h5>Lead API Engineer (Jan 2018 to Present)</h5>
                 <p>
                     Velo Payments is a an "all remote, no offices" start-up that was re-imagining 
                     business payments for the gig-economy. Working remotely with a great team of people to engineer a truly next-gen, data-driven, 
@@ -179,7 +179,7 @@
             </div>
             <div class="job">
                 <h4>AI Music</h4>
-                <h5>Lead Platform Engineer (Feb 2017 to Jan 2018)</h5>
+                <h5>Lead API Engineer (Feb 2017 to Jan 2018)</h5>
                 <p>
                     AI Music was evolving music from a static, one-directional interaction to one of dynamic co-creation. I led the architecture and engineering efforts to build out Google Cloud infrastructure to support a highly ambitious mobile app as a first step on that journey. This involves a Spring Boot based API, a large social graph, many innovative audio processing components and Tensor Flow models running in Google Machine Learning Engine.
                 </p>
